Update README and add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-javascript-starter</title>
+    <title>Beat Cancer | Support & Awareness</title>
+
+    <meta name="description" content="BeatCancer: An AI-powered precision oncology assistant helping patients with personalized treatment roadmaps." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://beat-cancer-project.vercel.app/" />
+    <meta property="og:title" content="Beat Cancer | AI-Powered Oncology Assistant" />
+    <meta property="og:description" content="Generate personalized treatment plans and manage medical records with the power of Google Gemini AI." />
+    <meta property="og:image" content="https://github.com/user-attachments/assets/33fd1cb0-7292-4679-870c-c0036123ebaa" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://beat-cancer-project.vercel.app/" />
+    <meta property="twitter:title" content="Beat Cancer | AI-Powered Oncology Assistant" />
+    <meta property="twitter:description" content="Generate personalized treatment plans and manage medical records with the power of Google Gemini AI." />
+    <meta property="twitter:image" content="https://github.com/user-attachments/assets/33fd1cb0-7292-4679-870c-c0036123ebaa" />
   </head>
   <body>
     <div id="root"></div>
